--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
   "author": "Vinson Chuong <vinsonchuong@gmail.com>",
   "repository": "vinsonchuong/ikeru",
   "scripts": {
-    "prepare": "flow-typed update --skip",
-    "test": "if [ -n \"$CI\" ]; then standard -v && flow check && ava -v; else standard -v --fix && flow && ava -v; fi",
+    "test": "if [ -n \"$CI\" ]; then standard -v && ava -v; else standard -v --fix && ava -v; fi",
     "release": "semantic-release",
     "prepack": "build-esm"
   },
@@ -25,8 +24,6 @@
   "devDependencies": {
     "ava": "^2.2.0",
     "build-esm": "^4.2.1",
-    "flow-bin": "^0.104.0",
-    "flow-typed": "^2.6.1",
     "overdub": "^2.4.0",
     "semantic-release": "^15.13.19",
     "standard-esnext": "^5.3.2"
