--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "devDependencies": {
     "ava": "^2.4.0",
     "build-esm": "^4.2.2",
+    "date-fns": "^2.3.0",
     "flow-bin": "^0.108.0",
     "flow-typed": "^2.6.1",
     "lodash": "^4.17.15",
